# crosschain-strategy

./: .gitlab-ci.yml  .solhintignore  DEPLOY.md  README.md  package-lock.json  package.json
contracts/: BBFabric.sol  BaseAppStorage.sol  DcRouter.sol
contracts/buildingBlocks/: BaseBuildingBlock.sol  DcSwapperV3.sol  GmxVault.sol  PerpetualVault.sol
contracts/buildingBlocks/aave/: AaveLens.sol  AaveStrategy.sol  AaveVault.sol
contracts/integrations/gmx/: IGlpManager.sol  IPositionRouter.sol  (+1 more)
contracts/interfaces/: IBBFabric.sol  IBaseAppStorage.sol  IDcRouter.sol  IWrappedNativeToken.sol
contracts/mocks/: AavePoolMock.sol  BBMock.sol  BLOCKEDUSDCMock.sol  DebtTokenMock.sol  DecodeHelper.sol  ERC20Mock.sol  IWETHMock.sol  PerpPortalMock.sol  PerpetualVaultMock.sol  UniswapFactoryV3Mock.sol  UniswapRouterV2Mock.sol  UniswapRouterV3Mock.sol  WETH9Mock.sol  WNCTMock.sol  vPerpTokenMock.sol
relayer/: .gitignore  Cargo.toml  README.md
relayer/abi/: Cargo.toml
relayer/abi/src/: main.rs
relayer/src/: api.rs  main.rs
relayer/src/api/: building_block.rs  perp_block.rs  uniswap_block.rs
scripts/: ConfigUtils.js  UniVaultTest.js
scripts/deploy/: BBFabric.js  DcRouter.js
scripts/utils/: deploy_full.sh  updateAddresses.js
subgraph/router-test/: networks.json  package.json  schema.graphql  subgraph.yaml
test/: BaseBuildingBlock.js
test/bbFabric/: Integration.js  Unit.js
test/dcRouter/: Integration.js  Unit.js
test/dcSwapper/: Integrations.js  Unit.js
test/gmx/: Integration.js  Unit.js
test/perp/: Integration.js  Unit.js
test/utils/: mock_utils.js
(+32 files in other folders)
