[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethcontract = { version = "0.15.4", default-features = false }

web3 = { version = "0.17.0", default-features = false, features = [
    "signing",
    "http-rustls-tls",
] }
tokio = { version = "1.15.0", features = ["full"] }
rocket = "0.5.0-rc.2"
rocket_contrib = "0.4.10"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.136"
serde_json = "1.0.79"
dotenv = "0.15.0"
eth-encode-packed = "0.1.0"
